packages/zpico/zpico-sys/c/include/zpico.h


typedef struct zpico_property_t {
  const char *key;
  const char *value;
} zpico_property_t;
typedef void (*ZpicoCallback)(const uint8_t *data, uintptr_t len, void *ctx);
typedef void (*ZpicoCallbackWithAttachment)(const uint8_t *data,
                                            uintptr_t len,
                                            const uint8_t *attachment,
                                            uintptr_t attachment_len,
                                            void *ctx);
typedef void (*ZpicoNotifyCallback)(uintptr_t len,
                                    const uint8_t *attachment,
                                    uintptr_t attachment_len,
                                    void *ctx);
typedef struct zpico_ring_desc_t {
  uint8_t *payload_base;
  uintptr_t payload_stride;
  uint8_t *att_base;
  uintptr_t att_stride;
  uintptr_t slot_count;
  uintptr_t *payload_len;
  uintptr_t *att_len;
  uintptr_t *head;
  uintptr_t *tail;
} zpico_ring_desc_t;
typedef void (*ZpicoZeroCopyCallback)(const uint8_t *data,
                                      uintptr_t len,
                                      const uint8_t *attachment,
                                      uintptr_t attachment_len,
                                      void *ctx);
typedef void (*ZpicoQueryCallback)(const char *keyexpr,
                                   uintptr_t keyexpr_len,
                                   const uint8_t *payload,
                                   uintptr_t payload_len,
                                   void *ctx);
int32_t zpico_init(const char *_locator);
int32_t zpico_init_with_config(const char *_locator,
                               const char *_mode,
                               const struct zpico_property_t *_properties,
                               uintptr_t _num_properties);
int32_t zpico_open(void);
int32_t zpico_is_open(void);
int32_t zpico_send_keep_alive(void);
int32_t zpico_publish_streamed(int32_t _handle,
                               uintptr_t _total_len,
                               void (*_chunk_cb)(uint8_t *out_buf,
                                                 uintptr_t cap,
                                                 uintptr_t *out_written,
                                                 void *user_ctx),
                               void *_user_ctx,
                               const uint8_t *_attachment,
                               uintptr_t _attachment_len);
void zpico_close(void);
void zpico_set_task_config(uint32_t _read_priority,
                           uint32_t _read_stack_bytes,
                           uint32_t _lease_priority,
                           uint32_t _lease_stack_bytes);
int32_t zpico_declare_publisher(const char *_keyexpr);
int32_t zpico_declare_publisher_ex(const char *_keyexpr, int32_t _is_express);
int32_t zpico_publish(int32_t _handle, const uint8_t *_data, uintptr_t _len);
int32_t zpico_undeclare_publisher(int32_t _handle);
int32_t zpico_declare_subscriber(const char *_keyexpr, ZpicoCallback _callback, void *_ctx);
int32_t zpico_declare_subscriber_with_attachment(const char *_keyexpr,
                                                 ZpicoCallbackWithAttachment _callback,
                                                 void *_ctx);
int32_t zpico_declare_subscriber_direct_write(const char *_keyexpr,
                                              uint8_t *_buf_ptr,
                                              uintptr_t _buf_capacity,
                                              const bool *_locked_ptr,
                                              ZpicoNotifyCallback _callback,
                                              void *_ctx);
int32_t zpico_declare_subscriber_ring(const char *_keyexpr,
                                      struct zpico_ring_desc_t *_desc,
                                      ZpicoNotifyCallback _callback,
                                      void *_ctx);
int32_t zpico_subscribe_zero_copy(const char *_keyexpr,
                                  ZpicoZeroCopyCallback _callback,
                                  void *_ctx);
int32_t zpico_undeclare_subscriber(int32_t _handle);
int32_t zpico_spin_once(uint32_t _timeout_ms);
bool zpico_uses_polling(void);
int32_t zpico_get_zid(uint8_t *_zid_out);
int32_t zpico_declare_liveliness(const char *_keyexpr);
int32_t zpico_undeclare_liveliness(int32_t _handle);
int32_t zpico_publish_with_attachment(int32_t _handle,
                                      const uint8_t *_data,
                                      uintptr_t _len,
                                      const uint8_t *_attachment,
                                      uintptr_t _attachment_len);
int32_t zpico_declare_queryable(const char *_keyexpr, ZpicoQueryCallback _callback, void *_ctx);
int32_t zpico_undeclare_queryable(int32_t _handle);
int32_t zpico_query_reply(int32_t _queryable_handle,
                          int64_t _reply_seq,
                          const char *_keyexpr,
                          const uint8_t *_data,
                          uintptr_t _len,
                          const uint8_t *_attachment,
                          uintptr_t _attachment_len);
int64_t zpico_queryable_take_reply_seq(int32_t _queryable_handle);
int32_t zpico_get(const char *_keyexpr,
                  const uint8_t *_payload,
                  uintptr_t _payload_len,
                  uint8_t *_reply_buf,
                  uintptr_t _reply_buf_size,
                  uint32_t _timeout_ms);
int32_t zpico_get_start(const char *_keyexpr,
                        const uint8_t *_payload,
                        uintptr_t _payload_len,
                        uint32_t _timeout_ms);
int32_t zpico_get_check(int32_t _handle, uint8_t *_reply_buf, uintptr_t _reply_buf_size);
int32_t zpico_liveliness_get_start(const char *_keyexpr, uint32_t _timeout_ms);
int32_t zpico_liveliness_get_check(int32_t _handle);
int32_t zpico_liveliness_get_count(int32_t _handle);
void zpico_set_reply_waker(void (*_func)(int32_t));
void zpico_clock_start(uint8_t *_clock_buf);
unsigned long zpico_clock_elapsed_ms_since(uint8_t *_clock_buf);